# axum_rabbit_template

./: Cargo.toml  docker-compose.yaml
src/: main.rs
src/state/: state.rs
src/users/: db.rs  errors.rs  handlers.rs  messages.rs  mod.rs  models.rs  routes.rs
