[package]
name = "axum_rabbit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
lapin = "2.5.0"
tokio = { version = "1.41.0", features = ["full"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.68"
tokio-postgres = "0.7.12"
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
